add new home components to template for development

--- a/src/templates/t01-home.twig
+++ b/src/templates/t01-home.twig
@@ -9,10 +9,39 @@
 
   {% include 'partials/degree-finder.twig' %}
 
+  {% include 'paragraphs/spotlight.twig' %}
+
+  {% include 'paragraphs/chart-group.twig' with {
+    title: 'Make a Smart Investment in Your Career',
+    text: 'When you earn a master’s degree from the Middlebury Institute, you’ll be prepared to be a leader in high-demand global industries and organizations. With our scholarships, grants, and other aid, you’ll see that our programs are an affordable investment in your future.',
+    items: [
+      {
+        type: 'stats',
+        number: 11,
+        label: 'Graduate Degrees'
+      },
+      {
+        type: 'stats',
+        number: 100,
+        suffix: '+',
+        label: 'Professional Internships'
+      },
+      {
+        type: 'stats',
+        number: 94,
+        suffix: '%',
+        label: 'Employed one year after graduation'
+      }
+    ]
+  } %}
+
+  {% include 'paragraphs/themed-panel.twig' %}
+
   <div class="container">
-
     {% include 'partials/callout-group.twig' %}
+  </div>
 
+  <div class="container">
     <div class="section">
       <div class="row">
         <div class="col-md-6 border-md-r">
@@ -66,7 +95,6 @@
         </div>
       </div>
     </div>
-
   </div>
 
   {% include 'partials/program-spotlight.twig' %}
