add logo bar component

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -54,6 +54,7 @@
 @import 'components/input-group';
 @import 'components/lead';
 @import 'components/list';
+@import 'components/logo-bar';
 @import 'components/media-object';
 @import 'components/media';
 @import 'components/mission-modal';
