--- a/src/templates/t01-home.twig
+++ b/src/templates/t01-home.twig
@@ -35,6 +35,8 @@
     ]
   } %}
 
+  {% include 'paragraphs/logo-bar.twig' %}
+
   {% include 'paragraphs/themed-panel.twig' %}
 
   <div class="container">
