--- a/src/templates/partials/img.twig
+++ b/src/templates/partials/img.twig
@@ -1,6 +1,6 @@
 {% block responsive_img %}
   {% set image = image_sizes[name] %}
-  {% set placehold = 'http://placehold.it/' %}
+  {% set placehold = 'https://placehold.it/' %}
 
   {% set src = '' %}
   {% set srcset = [] %}
