--- a/src/templates/partials/nav.twig
+++ b/src/templates/partials/nav.twig
@@ -8,7 +8,12 @@
       {% endif %}
 
       <li class="site-nav__item" data-nav-item>
-        <a href="{{item.url}}"{% if item.label %} aria-label="{{item.label}}"{% endif %} class="site-nav__link" data-nav-link>
+        <a
+          href="{{item.url}}"
+          {% if item.label %} aria-label="{{item.label}}"{% endif %}
+          class="site-nav__link {% if item.util %} site-nav__link--util{% endif %}"
+          data-nav-link
+        >
           {{item.text}}
 
           {% if has_sub_nav %}
