--- a/src/templates/t22-404.twig
+++ b/src/templates/t22-404.twig
@@ -11,58 +11,7 @@
       {% include 'partials/hero-form.twig' %}
     </section>
 
-    <section class="section" aria-label="Latest News and Events">
-
-      <div class="container">
-        <div class="row row--dividers">
-          <div class="col-md-6">
-            {% embed 'partials/section.twig' with {
-              title: 'Latest News',
-              class: 'mb-0',
-              moreLinkText: 'More News',
-              moreLinkHref: '#',
-              labelledby: 'midd-latest-news-label'
-            } %}
-              {% block content %}
-                <ol class="list list--lg">
-                  {% for i in 0..2 %}
-                    <li class="list__item">
-                      {% include 'partials/story-teaser-lite.twig' with {
-                        id: i,
-                        title: 'Undergraduate Interns Tackle Nonproliferation Issues',
-                        link: '#',
-                        blurb: "<p>The Liberian Senate recently appointed Middlebury Institute alumnus Jacob Jallah MAIEM ’15 as assistant minister for technical services for Liberia’s Ministry of Information, Cultural Affairs and Tourism.</p>"
-                      } %}
-                  {% endfor %}
-                </ol>
-              {% endblock %}
-            {% endembed %}
-
-          </div>
-          <div class="col-md-6">
-            {% embed 'partials/section.twig' with {
-              title: 'Upcoming Events',
-              class: 'u-mb-0',
-              moreLinkText: 'More Events',
-              moreLinkHref: '#',
-              labelledby: 'midd-upcoming-events-label'
-            } %}
-              {% block content %}
-                <ol class="list list--lg">
-                  {% for i in 0..2 %}
-                    <li class="list__item">
-                      {% include 'partials/event-teaser.twig' %}
-                    </li>
-                  {% endfor %}
-                </ol>
-              {% endblock %}
-            {% endembed %}
-
-          </div>
-        </div>
-      </div>
-
-    </section>
+    {% include 'paragraphs/news-and-events.twig' %}
 
   </section>
 {% endblock %}
