move container wrapper to callout group file

--- a/src/templates/partials/callout-group.twig
+++ b/src/templates/partials/callout-group.twig
@@ -1,32 +1,34 @@
-<div class="callout-group">
-  <div class="callout-group__row">
-    <div class="callout-group__item">
-      {% include 'partials/callout.twig' with {
-          title: 'How will you change the world?',
-          text: 'We can help.',
-          buttonText: 'Request Info'
-      } %}
-    </div>
-    <div class="callout-group__item">
-      {% include 'partials/callout.twig' with {
-        title: 'What makes us different?',
-        text: 'See for yourself.',
-        buttonText: 'Visit Campus'
-      } %}
-    </div>
-    <div class="callout-group__item">
-      {% include 'partials/callout.twig' with {
-        title: 'Preview Days',
-        text: 'July 15',
-        buttonText: 'Register'
-      } %}
-    </div>
-    <div class="callout-group__item">
-      {% include 'partials/callout.twig' with {
-        title: 'Application Deadline',
-        text: 'March 30',
-        buttonText: 'Apply Now'
-      } %}
+<div class="container">
+  <div class="callout-group">
+    <div class="callout-group__row">
+      <div class="callout-group__item">
+        {% include 'partials/callout.twig' with {
+            title: 'How will you change the world?',
+            text: 'We can help.',
+            buttonText: 'Request Info'
+        } %}
+      </div>
+      <div class="callout-group__item">
+        {% include 'partials/callout.twig' with {
+          title: 'What makes us different?',
+          text: 'See for yourself.',
+          buttonText: 'Visit Campus'
+        } %}
+      </div>
+      <div class="callout-group__item">
+        {% include 'partials/callout.twig' with {
+          title: 'Preview Days',
+          text: 'July 15',
+          buttonText: 'Register'
+        } %}
+      </div>
+      <div class="callout-group__item">
+        {% include 'partials/callout.twig' with {
+          title: 'Application Deadline',
+          text: 'March 30',
+          buttonText: 'Apply Now'
+        } %}
+      </div>
     </div>
   </div>
 </div>
