--- a/src/templates/t01-home.twig
+++ b/src/templates/t01-home.twig
@@ -37,14 +37,16 @@
 
   {% include 'paragraphs/logo-bar.twig' %}
 
-  {% include 'paragraphs/themed-panel.twig' %}
-
-  {% include 'partials/callout-group.twig' %}
-
   {% include 'partials/program-spotlight.twig' %}
+
+  {% include 'paragraphs/themed-panel.twig' %}
 
   <div class="container">
     {% include 'partials/profile-spotlight.twig' %}
   </div>
+
+  {% include 'paragraphs/news-and-events.twig' %}
+
+  {% include 'partials/callout-group.twig' %}
 
 {% endblock %}
