--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{title}}</title>
   <link rel="stylesheet" href="css/main.css">
-  {% if production %}
+  {% if env.production %}
     {# We use the development fonts here since the now.sh domain is whitelisted.  #}
     <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/83898/7327752/css/fonts.css" />
   {% else %}
