--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -17,7 +17,9 @@
   <nav aria-labelledby="midd-skip-link">
     <a href="#midd-main" class="sr-only sr-only-focusable" id="midd-skip-link">Skip to content</a>
   </nav>
-  {% include 'partials/icons.twig' %}
+  <div style="display:none">
+    {% include 'partials/icons.twig' %}
+  </div>
   <div class="site-container">
     {% if alert %}
       <div class="alert alert--warning">
