--- a/src/templates/partials/icons.twig
+++ b/src/templates/partials/icons.twig
@@ -1,83 +1,1 @@
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="0" height="0" style="position:absolute" role="complementary">
-
-		<symbol id="icon-arrow-down" viewBox="0 0 20 12">
-			<path d="M10 8L2 0 0 2l10 10L20 2l-2-2z" fill-rule="evenodd"></path>
-		</symbol>
-	
-		<symbol id="icon-arrow-left" viewBox="0 0 6 11">
-			<path d="M4.8 10.7L0 5.9l4.8-4.8c.3-.3.7-.3 1 0 .3.3.3.7 0 1L2 5.9l3.8 3.8c.3.3.3.7 0 1-.1.1-.3.2-.5.2s-.4-.1-.5-.2z" fill-rule="evenodd"></path>
-		</symbol>
-	
-		<symbol id="icon-arrow-right" viewBox="0 0 6 11">
-			<path d="M.7 10.9c-.2 0-.4-.1-.5-.2-.3-.3-.3-.7 0-1L4 5.9.2 2.1c-.3-.3-.3-.7 0-1 .3-.3.7-.3 1 0L6 5.9l-4.8 4.8c-.1.1-.3.2-.5.2z" fill-rule="evenodd"></path>
-		</symbol>
-	
-		<symbol id="icon-arrow-up" viewBox="0 0 20 12">
-			<path d="M10 4l-8 8-2-2L10 0l10 10-2 2z" fill-rule="evenodd"></path>
-		</symbol>
-	
-		<symbol id="icon-calendar" viewBox="0 0 21 21">
-			<path d="M18.6 1.7h-.8c0-.9-.7-1.6-1.6-1.6-.9 0-1.6.7-1.6 1.6H6.5C6.5.8 5.8.1 4.9.1 4 .1 3.2.8 3.2 1.7h-.8C1.1 1.7 0 2.8 0 4.1v13.7c0 1.3 1.1 2.4 2.4 2.4h16.2c1.3 0 2.4-1.1 2.4-2.4V4.1c0-1.3-1.1-2.4-2.4-2.4zM2.8 4.5c0-.5.2-.9.4-1.2 0 .9.7 1.6 1.6 1.6.9 0 1.6-.7 1.6-1.6.3.3.4.7.4 1.2 0 1.1-.9 2-2 2-1.1.1-2-.8-2-2zm8.1 11.9H5V15l2.6-2.2c1-.7 1.4-1.2 1.4-1.8 0-.7-.4-1-1.1-1-.6 0-1 .3-1.6 1.1l-1.2-1c.8-1.1 1.5-1.6 3-1.6 1.7 0 2.7 1 2.7 2.5 0 1.3-.7 2-2.1 3.1l-1.3 1h3.5v1.3zm4.3 0h-1.7v-6.2l-1.4.3-.4-1.4 2.3-.6h1.2v7.9zm1-9.8c-1.1 0-2-.9-2-2 0-.5.2-.9.4-1.2 0 .9.7 1.6 1.6 1.6.9 0 1.6-.7 1.6-1.6.3.3.4.7.4 1.2 0 1.1-.9 2-2 2z" fill-rule="evenodd"></path>
-		</symbol>
-	
-		<symbol id="icon-check" viewBox="0 0 19 14">
-			<path d="M7.1 14L0 6.9l2.1-2 5 5L16.9 0 19 2.1z" fill-rule="evenodd"></path>
-		</symbol>
-	
-		<symbol id="icon-chevron-down" viewBox="0 0 24 24">
-			<path d="M4.079 7H1l11 10L23 7h-3.079L12 14.201 4.079 7z" fill-rule="nonzero"></path>
-		</symbol>
-	
-		<symbol id="icon-close" viewBox="0 0 16 16">
-			<path d="M8 6.586l-4.95-4.95L1.636 3.05 6.586 8l-4.95 4.95 1.414 1.414L8 9.414l4.95 4.95 1.414-1.414L9.414 8l4.95-4.95-1.414-1.414L8 6.586z" fill-rule="nonzero"></path>
-		</symbol>
-	
-		<symbol id="icon-compass" viewBox="0 0 18 22">
-			<path d="M9.4 3.3v-.4c.6-.2 1.1-.7 1.1-1.4C10.5.7 9.9.1 9.1.1c-.8 0-1.4.6-1.4 1.4 0 .7.5 1.2 1.1 1.4v.4c-5 .2-8.8 4.2-8.8 9 0 5 4 9 9 9s9-4 9-9c0-4.8-3.9-8.8-8.6-9zM8.3 1.5c0-.4.3-.7.7-.7.4 0 .7.3.7.7 0 .4-.3.7-.7.7-.4 0-.7-.3-.7-.7zM4.6 17.2h-.2c-.1 0-.2 0-.3-.1-.1-.1-.1-.2 0-.4L7 10.9l3.4 3.4-5.8 2.9zm9.3-9.3L11 13.8l-3.4-3.4 5.9-2.9c.1-.1.3 0 .4.1 0 0 .1.1 0 .3z" fill-rule="evenodd"></path>
-		</symbol>
-	
-		<symbol id="icon-email" viewBox="0 0 32 32">
-			<g transform="translate(0 5)"><path d="M1.28 0L16 10.353 30.72 0z"></path><path d="M0 1.294v18.118C0 20.835 1.152 22 2.56 22h26.88c1.408 0 2.56-1.165 2.56-2.588V1.294L16 15.53 0 1.294z"></path></g>
-		</symbol>
-	
-		<symbol id="icon-facebook" viewBox="0 0 32 32">
-			<path d="M30.234 0H1.766C.791 0 0 .79 0 1.766v28.468C0 31.209.79 32 1.766 32h15.326V19.608h-4.17v-4.83h4.17v-3.561c0-4.133 2.525-6.384 6.212-6.384 1.766 0 3.284.132 3.726.19v4.32l-2.557.001c-2.005 0-2.394.953-2.394 2.351v3.083h4.783l-.623 4.83h-4.16V32h8.155c.975 0 1.766-.79 1.766-1.766V1.766C32 .791 31.21 0 30.234 0" fill-rule="evenodd"></path>
-		</symbol>
-	
-		<symbol id="icon-instagram" viewBox="0 0 32 32">
-			<g fill-rule="evenodd"><path d="M24.54 5.54a1.92 1.92 0 1 0 0 3.838 1.92 1.92 0 0 0 0-3.839"></path><path d="M29.024 22.465c-.07 1.56-.331 2.407-.55 2.972a4.967 4.967 0 0 1-1.197 1.84c-.56.56-1.093.905-1.84 1.196-.565.22-1.412.48-2.972.55-1.686.078-2.193.094-6.465.094s-4.778-.016-6.466-.093c-1.56-.07-2.406-.331-2.971-.55a4.96 4.96 0 0 1-1.838-1.197 4.947 4.947 0 0 1-1.197-1.84c-.22-.565-.48-1.412-.552-2.972-.077-1.688-.093-2.193-.093-6.465s.016-4.778.093-6.466c.072-1.56.333-2.406.552-2.971a4.954 4.954 0 0 1 1.197-1.838 4.94 4.94 0 0 1 1.838-1.197c.565-.22 1.411-.48 2.971-.552 1.688-.077 2.194-.093 6.466-.093s4.777.016 6.465.093c1.56.072 2.407.333 2.972.552.747.29 1.28.637 1.84 1.197s.905 1.092 1.196 1.838c.22.565.48 1.411.55 2.971.078 1.688.094 2.194.094 6.466s-.016 4.777-.093 6.465m2.88-13.062c-.079-1.702-.349-2.866-.744-3.883a7.809 7.809 0 0 0-1.845-2.834A7.861 7.861 0 0 0 26.481.84C25.462.445 24.3.174 22.597.096 20.89.019 20.345 0 16 0c-4.346 0-4.89.019-6.597.096C7.701.174 6.537.445 5.52.84a7.834 7.834 0 0 0-2.834 1.846A7.834 7.834 0 0 0 .84 5.52C.445 6.537.174 7.7.096 9.403.019 11.11 0 11.654 0 16c0 4.345.019 4.891.096 6.597.078 1.704.349 2.865.744 3.884a7.861 7.861 0 0 0 1.846 2.834A7.809 7.809 0 0 0 5.52 31.16c1.017.395 2.18.665 3.883.744C11.11 31.982 11.654 32 16 32c4.345 0 4.891-.018 6.597-.096 1.702-.079 2.865-.349 3.884-.744a7.835 7.835 0 0 0 2.834-1.845 7.835 7.835 0 0 0 1.845-2.834c.395-1.019.665-2.18.744-3.884C31.982 20.89 32 20.345 32 16c0-4.346-.018-4.89-.096-6.597"></path><path d="M16 21.333a5.334 5.334 0 1 1 .002-10.667A5.334 5.334 0 0 1 16 21.333m0-13.55a8.217 8.217 0 0 0 0 16.434 8.217 8.217 0 0 0 0-16.434"></path></g>
-		</symbol>
-	
-		<symbol id="icon-linkedin" viewBox="0 0 32 32">
-			<path d="M27.267 27.267h-4.744v-7.426c0-1.772-.032-4.05-2.465-4.05-2.47 0-2.849 1.93-2.849 3.923v7.553h-4.744v-15.27h4.554v2.087h.065c.633-1.201 2.18-2.466 4.49-2.466 4.807 0 5.693 3.162 5.693 7.275v8.374zM7.114 9.911a2.751 2.751 0 0 1-2.748-2.753c0-1.52 1.23-2.754 2.748-2.754a2.753 2.753 0 0 1 0 5.507zM4.742 27.267H9.49v-15.27H4.742v15.27zM29.632 0H2.36C1.059 0 0 1.033 0 2.308V29.69C0 30.965 1.059 32 2.36 32h27.271c1.306 0 2.367-1.035 2.367-2.31V2.308C31.998 1.033 30.937 0 29.63 0z" fill-rule="evenodd"></path>
-		</symbol>
-	
-		<symbol id="icon-map" viewBox="0 0 17 20">
-			<path d="M8.3 0C3.7 0 0 3.7 0 8.3c0 2.3 1 4.5 2.6 6L8.3 20l5.9-5.9c1.5-1.5 2.4-3.5 2.4-5.8 0-4.6-3.7-8.3-8.3-8.3zm0 11.9c-2 0-3.6-1.6-3.6-3.6s1.6-3.6 3.6-3.6 3.6 1.6 3.6 3.6-1.6 3.6-3.6 3.6z" fill-rule="evenodd"></path>
-		</symbol>
-	
-		<symbol id="icon-play" viewBox="0 0 6 8">
-			<path d="M6 4L0 8V0z" fill-rule="evenodd"></path>
-		</symbol>
-	
-		<symbol id="icon-plus" viewBox="0 0 16 16">
-			<path d="M9 7V0H7v7H0v2h7v7h2V9h7V7H9z" fill-rule="evenodd"></path>
-		</symbol>
-	
-		<symbol id="icon-search" viewBox="0 0 10 10">
-			<path d="M9.8 8.9L8 7.1c.6-.7.9-1.7.9-2.7C8.9 2 6.9 0 4.5 0 2 0 0 2 0 4.5S2 9 4.5 9c1 0 2-.4 2.7-.9l1.7 1.7c.1 0 .3.1.5.1s.3-.1.4-.2c.2-.2.2-.6 0-.8zM1.2 4.5c0-1.8 1.5-3.3 3.3-3.3 1.8 0 3.3 1.5 3.3 3.3 0 1.8-1.5 3.2-3.3 3.2-1.8 0-3.3-1.4-3.3-3.2z" fill-rule="evenodd"></path>
-		</symbol>
-	
-		<symbol id="icon-twitter" viewBox="0 0 32 32">
-			<path d="M31.106 2.525A12.51 12.51 0 0 1 26.93 4.24C25.74 2.857 24.032 2 22.148 2c-3.626 0-6.56 3.168-6.56 7.07 0 .56.054 1.102.16 1.61-5.456-.297-10.291-3.115-13.526-7.385a7.425 7.425 0 0 0-.889 3.553c0 2.45 1.156 4.62 2.915 5.88a6.233 6.233 0 0 1-2.968-.876v.088c0 3.43 2.257 6.283 5.261 6.93a6.312 6.312 0 0 1-2.968.122c.835 2.8 3.27 4.848 6.132 4.9-2.24 1.908-5.066 3.028-8.14 3.028-.534 0-1.067-.035-1.565-.088C2.897 28.828 6.346 30 10.06 30c12.07 0 18.664-10.762 18.664-20.108l-.017-.91c1.297-.997 2.4-2.24 3.288-3.674-1.19.577-2.453.945-3.768 1.12 1.35-.875 2.382-2.258 2.88-3.903" fill-rule="evenodd"></path>
-		</symbol>
-	
-		<symbol id="icon-vimeo" viewBox="0 0 32 32">
-			<path d="M18.346 9.518c3.656-2.207 5.61.893 3.74 4.38-1.87 3.488-3.571 5.78-4.464 5.78-.893 0-1.584-2.343-2.594-6.436C13.966 9.03 13.966 1.415 9.586 2.29 5.442 3.1 0 9.603 0 9.603l1.297 1.701s2.679-2.123 3.572-1.061c.893 1.061 4.313 13.814 5.441 16.173.994 2.055 3.74 4.785 6.74 2.83 3.014-1.936 13.004-10.479 14.79-20.553C33.627-1.365 19.812.74 18.346 9.518" fill-rule="evenodd"></path>
-		</symbol>
-	
-		<symbol id="icon-youtube" viewBox="0 0 29 20">
-			<path d="M28.2 4.3s-.3-2-1.1-2.8C26 .4 24.8.4 24.3.3 20.2 0 14.2 0 14.2 0s-6 0-9.9.3c-.6.1-1.8.1-2.9 1.2C.6 2.4.3 4.3.3 4.3S0 6.6 0 8.9v2.2c0 2.3.3 4.6.3 4.6s.3 2 1.1 2.8c1.1 1.1 2.5 1.1 3.1 1.2 2.3.2 9.7.3 9.7.3s6 0 10-.3c.6-.1 1.8-.1 2.8-1.2.9-.9 1.1-2.8 1.1-2.8s.3-2.3.3-4.6V8.9c0-2.3-.2-4.6-.2-4.6zm-16.9 9.4v-8l7.7 4-7.7 4z" fill-rule="evenodd"></path>
-		</symbol>
-	
-</svg>
+<?xml version="1.0" encoding="utf-8"?><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><symbol viewBox="0 0 20 12" id="icon-arrow-down"><path d="M10 8L2 0 0 2l10 10L20 2l-2-2z" fill-rule="evenodd"/></symbol><symbol viewBox="0 0 6 11" id="icon-arrow-left"><path d="M4.8 10.7L0 5.9l4.8-4.8c.3-.3.7-.3 1 0 .3.3.3.7 0 1L2 5.9l3.8 3.8c.3.3.3.7 0 1-.1.1-.3.2-.5.2s-.4-.1-.5-.2z" fill-rule="evenodd"/></symbol><symbol viewBox="0 0 6 11" id="icon-arrow-right"><path d="M.7 10.9c-.2 0-.4-.1-.5-.2-.3-.3-.3-.7 0-1L4 5.9.2 2.1c-.3-.3-.3-.7 0-1 .3-.3.7-.3 1 0L6 5.9l-4.8 4.8c-.1.1-.3.2-.5.2z" fill-rule="evenodd"/></symbol><symbol viewBox="0 0 20 12" id="icon-arrow-up"><path d="M10 4l-8 8-2-2L10 0l10 10-2 2z" fill-rule="evenodd"/></symbol><symbol viewBox="0 0 21 21" id="icon-calendar"><path d="M18.6 1.7h-.8c0-.9-.7-1.6-1.6-1.6-.9 0-1.6.7-1.6 1.6H6.5C6.5.8 5.8.1 4.9.1 4 .1 3.2.8 3.2 1.7h-.8C1.1 1.7 0 2.8 0 4.1v13.7c0 1.3 1.1 2.4 2.4 2.4h16.2c1.3 0 2.4-1.1 2.4-2.4V4.1c0-1.3-1.1-2.4-2.4-2.4zM2.8 4.5c0-.5.2-.9.4-1.2 0 .9.7 1.6 1.6 1.6.9 0 1.6-.7 1.6-1.6.3.3.4.7.4 1.2 0 1.1-.9 2-2 2-1.1.1-2-.8-2-2zm8.1 11.9H5V15l2.6-2.2c1-.7 1.4-1.2 1.4-1.8 0-.7-.4-1-1.1-1-.6 0-1 .3-1.6 1.1l-1.2-1c.8-1.1 1.5-1.6 3-1.6 1.7 0 2.7 1 2.7 2.5 0 1.3-.7 2-2.1 3.1l-1.3 1h3.5v1.3zm4.3 0h-1.7v-6.2l-1.4.3-.4-1.4 2.3-.6h1.2v7.9zm1-9.8c-1.1 0-2-.9-2-2 0-.5.2-.9.4-1.2 0 .9.7 1.6 1.6 1.6.9 0 1.6-.7 1.6-1.6.3.3.4.7.4 1.2 0 1.1-.9 2-2 2z" fill-rule="evenodd"/></symbol><symbol viewBox="0 0 19 14" id="icon-check"><path d="M7.1 14L0 6.9l2.1-2 5 5L16.9 0 19 2.1z" fill-rule="evenodd"/></symbol><symbol fill-rule="evenodd" viewBox="0 0 24 24" id="icon-chevron-down"><path d="M4.079 7H1l11 10L23 7h-3.079L12 14.201 4.079 7z"/></symbol><symbol viewBox="0 0 16 16" id="icon-close"><path d="M8 6.586l-4.95-4.95L1.636 3.05 6.586 8l-4.95 4.95 1.414 1.414L8 9.414l4.95 4.95 1.414-1.414L9.414 8l4.95-4.95-1.414-1.414L8 6.586z"/></symbol><symbol viewBox="0 0 18 22" id="icon-compass"><path d="M9.4 3.3v-.4c.6-.2 1.1-.7 1.1-1.4C10.5.7 9.9.1 9.1.1c-.8 0-1.4.6-1.4 1.4 0 .7.5 1.2 1.1 1.4v.4c-5 .2-8.8 4.2-8.8 9 0 5 4 9 9 9s9-4 9-9c0-4.8-3.9-8.8-8.6-9zM8.3 1.5c0-.4.3-.7.7-.7.4 0 .7.3.7.7 0 .4-.3.7-.7.7-.4 0-.7-.3-.7-.7zM4.6 17.2h-.2c-.1 0-.2 0-.3-.1-.1-.1-.1-.2 0-.4L7 10.9l3.4 3.4-5.8 2.9zm9.3-9.3L11 13.8l-3.4-3.4 5.9-2.9c.1-.1.3 0 .4.1 0 0 .1.1 0 .3z" fill-rule="evenodd"/></symbol><symbol viewBox="0 0 32 32" id="icon-email"><path d="M1.28 5L16 15.353 30.72 5z"/><path d="M0 6.294v18.118C0 25.835 1.152 27 2.56 27h26.88c1.408 0 2.56-1.165 2.56-2.588V6.294L16 20.53 0 6.294z"/></symbol><symbol viewBox="0 0 32 32" id="icon-facebook"><path d="M30.234 0H1.766C.791 0 0 .79 0 1.766v28.468C0 31.209.79 32 1.766 32h15.326V19.608h-4.17v-4.83h4.17v-3.561c0-4.133 2.525-6.384 6.212-6.384 1.766 0 3.284.132 3.726.19v4.32l-2.557.001c-2.005 0-2.394.953-2.394 2.351v3.083h4.783l-.623 4.83h-4.16V32h8.155c.975 0 1.766-.79 1.766-1.766V1.766C32 .791 31.21 0 30.234 0" fill-rule="evenodd"/></symbol><symbol viewBox="0 0 32 32" id="icon-instagram"><g fill-rule="evenodd"><path d="M24.54 5.54a1.92 1.92 0 100 3.838 1.92 1.92 0 000-3.839"/><path d="M29.024 22.465c-.07 1.56-.331 2.407-.55 2.972a4.967 4.967 0 01-1.197 1.84c-.56.56-1.093.905-1.84 1.196-.565.22-1.412.48-2.972.55-1.686.078-2.193.094-6.465.094s-4.778-.016-6.466-.093c-1.56-.07-2.406-.331-2.971-.55a4.96 4.96 0 01-1.838-1.197 4.947 4.947 0 01-1.197-1.84c-.22-.565-.48-1.412-.552-2.972-.077-1.688-.093-2.193-.093-6.465s.016-4.778.093-6.466c.072-1.56.333-2.406.552-2.971a4.954 4.954 0 011.197-1.838 4.94 4.94 0 011.838-1.197c.565-.22 1.411-.48 2.971-.552 1.688-.077 2.194-.093 6.466-.093s4.777.016 6.465.093c1.56.072 2.407.333 2.972.552.747.29 1.28.637 1.84 1.197s.905 1.092 1.196 1.838c.22.565.48 1.411.55 2.971.078 1.688.094 2.194.094 6.466s-.016 4.777-.093 6.465m2.88-13.062c-.079-1.702-.349-2.866-.744-3.883a7.809 7.809 0 00-1.845-2.834A7.861 7.861 0 0026.481.84C25.462.445 24.3.174 22.597.096 20.89.019 20.345 0 16 0c-4.346 0-4.89.019-6.597.096C7.701.174 6.537.445 5.52.84a7.834 7.834 0 00-2.834 1.846A7.834 7.834 0 00.84 5.52C.445 6.537.174 7.7.096 9.403.019 11.11 0 11.654 0 16c0 4.345.019 4.891.096 6.597.078 1.704.349 2.865.744 3.884a7.861 7.861 0 001.846 2.834A7.809 7.809 0 005.52 31.16c1.017.395 2.18.665 3.883.744C11.11 31.982 11.654 32 16 32c4.345 0 4.891-.018 6.597-.096 1.702-.079 2.865-.349 3.884-.744a7.835 7.835 0 002.834-1.845 7.835 7.835 0 001.845-2.834c.395-1.019.665-2.18.744-3.884C31.982 20.89 32 20.345 32 16c0-4.346-.018-4.89-.096-6.597"/><path d="M16 21.333a5.334 5.334 0 11.002-10.667A5.334 5.334 0 0116 21.333m0-13.55a8.217 8.217 0 000 16.434 8.217 8.217 0 000-16.434"/></g></symbol><symbol viewBox="0 0 32 32" id="icon-linkedin"><path d="M27.267 27.267h-4.744v-7.426c0-1.772-.032-4.05-2.465-4.05-2.47 0-2.849 1.93-2.849 3.923v7.553h-4.744v-15.27h4.554v2.087h.065c.633-1.201 2.18-2.466 4.49-2.466 4.807 0 5.693 3.162 5.693 7.275v8.374zM7.114 9.911a2.751 2.751 0 01-2.748-2.753c0-1.52 1.23-2.754 2.748-2.754a2.753 2.753 0 010 5.507zM4.742 27.267H9.49v-15.27H4.742v15.27zM29.632 0H2.36C1.059 0 0 1.033 0 2.308V29.69C0 30.965 1.059 32 2.36 32h27.271c1.306 0 2.367-1.035 2.367-2.31V2.308C31.998 1.033 30.937 0 29.63 0z" fill-rule="evenodd"/></symbol><symbol viewBox="0 0 17 20" id="icon-map"><path d="M8.3 0C3.7 0 0 3.7 0 8.3c0 2.3 1 4.5 2.6 6L8.3 20l5.9-5.9c1.5-1.5 2.4-3.5 2.4-5.8 0-4.6-3.7-8.3-8.3-8.3zm0 11.9c-2 0-3.6-1.6-3.6-3.6s1.6-3.6 3.6-3.6 3.6 1.6 3.6 3.6-1.6 3.6-3.6 3.6z" fill-rule="evenodd"/></symbol><symbol viewBox="0 0 6 8" id="icon-play"><path d="M6 4L0 8V0z" fill-rule="evenodd"/></symbol><symbol viewBox="0 0 16 16" id="icon-plus"><path d="M9 7V0H7v7H0v2h7v7h2V9h7V7H9z" fill-rule="evenodd"/></symbol><symbol viewBox="0 0 10 10" id="icon-search"><path d="M9.8 8.9L8 7.1c.6-.7.9-1.7.9-2.7C8.9 2 6.9 0 4.5 0 2 0 0 2 0 4.5S2 9 4.5 9c1 0 2-.4 2.7-.9l1.7 1.7c.1 0 .3.1.5.1s.3-.1.4-.2c.2-.2.2-.6 0-.8zM1.2 4.5c0-1.8 1.5-3.3 3.3-3.3 1.8 0 3.3 1.5 3.3 3.3 0 1.8-1.5 3.2-3.3 3.2-1.8 0-3.3-1.4-3.3-3.2z" fill-rule="evenodd"/></symbol><symbol viewBox="0 0 32 32" id="icon-twitter"><path d="M31.106 2.525A12.51 12.51 0 0126.93 4.24C25.74 2.857 24.032 2 22.148 2c-3.626 0-6.56 3.168-6.56 7.07 0 .56.054 1.102.16 1.61-5.456-.297-10.291-3.115-13.526-7.385a7.425 7.425 0 00-.889 3.553c0 2.45 1.156 4.62 2.915 5.88a6.233 6.233 0 01-2.968-.876v.088c0 3.43 2.257 6.283 5.261 6.93a6.312 6.312 0 01-2.968.122c.835 2.8 3.27 4.848 6.132 4.9-2.24 1.908-5.066 3.028-8.14 3.028-.534 0-1.067-.035-1.565-.088C2.897 28.828 6.346 30 10.06 30c12.07 0 18.664-10.762 18.664-20.108l-.017-.91c1.297-.997 2.4-2.24 3.288-3.674-1.19.577-2.453.945-3.768 1.12 1.35-.875 2.382-2.258 2.88-3.903" fill-rule="evenodd"/></symbol><symbol viewBox="0 0 32 32" id="icon-vimeo"><path d="M18.346 9.518c3.656-2.207 5.61.893 3.74 4.38-1.87 3.488-3.571 5.78-4.464 5.78-.893 0-1.584-2.343-2.594-6.436C13.966 9.03 13.966 1.415 9.586 2.29 5.442 3.1 0 9.603 0 9.603l1.297 1.701s2.679-2.123 3.572-1.061c.893 1.061 4.313 13.814 5.441 16.173.994 2.055 3.74 4.785 6.74 2.83 3.014-1.936 13.004-10.479 14.79-20.553C33.627-1.365 19.812.74 18.346 9.518" fill-rule="evenodd"/></symbol><symbol viewBox="0 0 29 20" id="icon-youtube"><path d="M28.2 4.3s-.3-2-1.1-2.8C26 .4 24.8.4 24.3.3 20.2 0 14.2 0 14.2 0s-6 0-9.9.3c-.6.1-1.8.1-2.9 1.2C.6 2.4.3 4.3.3 4.3S0 6.6 0 8.9v2.2c0 2.3.3 4.6.3 4.6s.3 2 1.1 2.8c1.1 1.1 2.5 1.1 3.1 1.2 2.3.2 9.7.3 9.7.3s6 0 10-.3c.6-.1 1.8-.1 2.8-1.2.9-.9 1.1-2.8 1.1-2.8s.3-2.3.3-4.6V8.9c0-2.3-.2-4.6-.2-4.6zm-16.9 9.4v-8l7.7 4-7.7 4z" fill-rule="evenodd"/></symbol></svg>
