--- a/src/templates/t01-home.twig
+++ b/src/templates/t01-home.twig
@@ -9,6 +9,14 @@
 
   {% include 'partials/degree-finder.twig' %}
 
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 offset-md-2">
+        {% include 'paragraphs/text.twig' %}
+      </div>
+    </div>
+  </div>
+
   {% include 'paragraphs/spotlight.twig' %}
 
   {% include 'paragraphs/chart-group.twig' with {
