use div to fix ie11 bug

--- a/src/templates/pardot-landing-page.twig
+++ b/src/templates/pardot-landing-page.twig
@@ -20,7 +20,7 @@
       </span>
     </div>
   </header>
-  <main class="site-container container">
+  <div class="site-container container">
 
     <div class="hero">
       <h1 class="hero__title" pardot-region-type="simple" pardot-region="hero-title">Stop the spread of WMD.</h1>
@@ -101,7 +101,7 @@
       </figcaption>
     </figure>
 
-  </main>
+  </div>
   <footer class="site-footer">
     <div class="container site-footer__container">
       <img src="https://storage.pardot.com/74172/262515/middlebury_logo_white.svg" alt="Logo for Middlebury" width="150">
