--- a/src/templates/pardot-landing-page.twig
+++ b/src/templates/pardot-landing-page.twig
@@ -4,8 +4,8 @@
   {# <base href="https://learn.middlebury.edu" > #}
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/pardot-landing.css">
   <link rel="stylesheet" href="https://learn.middlebury.edu/place-design">
+  <link rel="stylesheet" href="css/pardot-place-template.css">
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/83898/706148/css/fonts.css" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <meta name="description" content="%%description%%"/>
