--- a/src/templates/pardot-landing-page.twig
+++ b/src/templates/pardot-landing-page.twig
@@ -69,34 +69,41 @@
       </div>
     </dl>
 
-    <figure class="video" data-video>
+    <figure class="video js-video-bg" data-video>
       <a
         href="https://vimeo.com/150675649"
-        class="video__src"
+        class="js-show-in-editor"
         data-video-src
         pardot-region="video-link"
         pardot-region-type="link">View video</a>
+
+      <img
+        src="https://placehold.it/1024x576"
+        alt=""
+        class="js-show-in-editor"
+        pardot-region="video-image"
+        pardot-region-type="image"
+        data-cover-bg=".js-video-bg"
+      />
+
       <a href="#" class="video__link" data-video-trigger>
-        <img src="http://placehold.it/1024x576" alt="" class="video__image" pardot-region="video-image" pardot-region-type="image">
-        <figcaption class="video__overlay">
-          <div class="video__content">
-            <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" class="video__icon">
-              <path fill="#FFF" fill-rule="evenodd" d="M0 100l100-50L0 0z"/>
-            </svg>
-            <p class="video__text" pardot-region="video-text" pardot-region-type="simple">&ldquo;Important problems with real-world implications&rdquo;</p>
-            <span class="video__cta" pardot-region="video-cta" pardot-region-type="simple">Watch Program Overview</span>
-          </div>
+        <figcaption class="video__content">
+          <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100" class="video__icon">
+            <path fill="#FFF" fill-rule="evenodd" d="M0 100l100-50L0 0z"/>
+          </svg>
+          <p class="video__text">&ldquo;<span pardot-region="video-text" pardot-region-type="simple">Important problems with real-world implications</span>&rdquo;</p>
+          <span class="video__cta" pardot-region="video-cta" pardot-region-type="simple">Watch Program Overview</span>
         </figcaption>
       </a>
     </figure>
 
     <figure class="quote">
-      <img src="http://placehold.it/250x250" alt="" pardot-region="quote-image" pardot-region-type="image" class="quote__image">
+      <img src="https://placehold.it/250x250" alt="" pardot-region="quote-image" pardot-region-type="image" class="quote__image">
       <figcaption class="quote__body">
-        <blockquote class="quote__text" pardot-region="quote-text" pardot-region-type="simple">&ldquo;The Institutes exemplary faculty and far-reaching connections are what have made my experiences here amazing.&rdquo;</blockquote>
-        <span class="quote__cite" pardot-region="quote-cite" pardot-region-type="simple">
-          Kyle Pilutti, Student<br>
-          Nonproliferation and Terrorism Studies
+        <blockquote class="quote__text">&ldquo;<span pardot-region="quote-text" pardot-region-type="simple">The Institutes exemplary faculty and far-reaching connections are what have made my experiences here amazing.</span>&rdquo;</blockquote>
+        <span class="quote__cite">
+          <span pardot-region="quote-name" pardot-region-type="simple">Kyle Pilutti, Student</span><br>
+          <span pardot-region="quote-program" pardot-region-type="simple">Nonproliferation and Terrorism Studies</span>
         </span>
       </figcaption>
     </figure>
@@ -114,17 +121,23 @@
   <script>
     (function() {
 
+      function getVimeoIdFromUrl(url) {
+        var re = /(?!\/)[0-9]{9}/;
+        var id = url.match(re)[0];
+        return id
+      }
+
       function handleVideoClick(event,video,link) {
-        if(link.href.indexOf('vimeo.com/') == -1) {
+        var id = getVimeoIdFromUrl(link.href);
+
+        if(!id) {
           // do nothing on links without proper url
           return;
         }
 
         event.preventDefault();
 
-        var src = link.href
-          .replace('vimeo.com', 'player.vimeo.com')
-          .replace('vimeo.com/', 'vimeo.com/video/') + '?autoplay=1'
+        var src = 'https://player.vimeo.com/video/' + id + '?autoplay=1';
 
         var iframe = document.createElement('iframe');
         iframe.src = src;
@@ -147,14 +160,33 @@
       });
 
       // force display video link if pardot-loaded is in page e.g. user is editing page template content
-      var loaded = document.querySelector('#pardot-loaded')
-      if(loaded) {
-        [].forEach.call(document.querySelectorAll('[data-video-src]'), function(link) {
-          link.style.display = 'block';
-        });
+
+      function setVideoBg() {
+        var el = document.querySelector('[data-video]')
+        var img = el.querySelector('img');
+
+        // set the background
+        el.style.backgroundImage = 'url(' + img.src + ')';
+        el.style.backgroundSize = 'cover';
+        el.style.backgroundPosition = 'center';
+
+      }
+
+      setVideoBg()
+
+
+      window.onload = function() {
+        var loaded = document.querySelector('#pardot-loaded')
+        if(loaded) {
+          [].forEach.call(document.querySelectorAll('.js-show-in-editor'), function(el) {
+            el.classList.remove('js-show-in-editor');
+          });
+        }
       }
 
     })();
+
+
   </script>
 </body>
 </html>
