set links and help text within the form to white since it's on a dark background

--- a/src/scss/pardot-place-template.scss
+++ b/src/scss/pardot-place-template.scss
@@ -254,6 +254,11 @@ img {
   .form-group.error {
     margin-bottom: 4px;
   }
+
+  a,
+  .description {
+    color: $white;
+  }
 }
 
 .form-actions {
