--- a/src/scss/pardot-place-template.scss
+++ b/src/scss/pardot-place-template.scss
@@ -195,6 +195,11 @@ img {
     margin-bottom: 4px;
   }
 
+  // add asterisks to required field labels
+  .required label:after {
+    content: '*';
+  }
+
   select,
   input[type='text'] {
     display: block;
