--- a/src/scss/components/_chart.scss
+++ b/src/scss/components/_chart.scss
@@ -50,3 +50,49 @@
     @include make-col(4);
   }
 }
+
+// chart legend
+
+.chart-legend {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  display: flex;
+  justify-content: center;
+
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  li {
+    font-size: 14px;
+    margin-bottom: 4px;
+  }
+
+  span {
+    display: inline-block;
+    background: $gray-light;
+    width: 16px;
+    height: 8px;
+    margin-right: 8px;
+  }
+}
+
+.chart-legend--inline {
+  ul {
+    @include media(md) {
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
+
+  li {
+    flex: 0 0 auto;
+    @include media(md) {
+      &:not(:last-child) {
+        margin-right: 1rem;
+      }
+    }
+  }
+}
