--- a/src/templates/c14-charts.twig
+++ b/src/templates/c14-charts.twig
@@ -6,94 +6,172 @@
 
 {% block layout_content %}
 
+
   {% include 'paragraphs/chart.twig' with {
-    title: 'Time until employment',
-    id: 'employed',
-    type: 'pie',
-    label: 'Time employed',
-    data: [
-      30.16,
-      6.35,
-      39.68,
-      22.22,
-      1.59,
-    ],
-    labels: [
-      "Employed within 3 months of graduating",
-      "Employed within 6 months of graduating",
-      "Employed at graduation",
-      "Employed within 1 year of graduating",
-      "Employed within 2 or more years after graduating",
+    title: 'Basic chart',
+    type: 'bar',
+    suffix: '%',
+    title: 'Some pie chart',
+    labels: ['label 1', 'label 2', 'label 3'],
+    datasets: [
+      { label: 'data 1', data: [10,40,70] },
+      { label: 'data 1', data: [15,47,60] },
+      { label: 'data 1', data: [24,42,86] }
     ]
   } %}
 
-  {% include 'paragraphs/chart.twig' with {
-    title: 'Salary',
-    id: 'salary',
-    type: 'horizontalBar',
-    data: [
-      18.87,
-      39.62,
-      26.42,
-      9.43,
-      5.66,
-    ],
-    label: 'salary',
-    labels: [
-      "30k or less",
-      "$31k to 50k",
-      "$51k to $70k",
-      "$71k to $90k",
-      "$91k or more",
+
+  {% include 'paragraphs/chart-group.twig' with {
+    title: 'Grouped Bar chart',
+    text: 'This bar chart has a suggested maximum value which shows up on the y axis, and a value suffix so it can be presented as a percentage.',
+    items: [
+      {
+        type: 'bar',
+        suffix: '%',
+        title: 'Some pie chart',
+        labels: ['label 1', 'label 2', 'label 3'],
+        datasets: [
+          { label: 'data 1', data: [10,40,70] },
+          { label: 'data 1', data: [15,47,60] },
+          { label: 'data 1', data: [24,42,86] }
+        ]
+      }
     ]
   } %}
 
-  {% include 'paragraphs/chart.twig' with {
-    title: 'Job Function',
-    id: 'job-function',
-    type: 'doughnut',
-    data: [
-      2.273,
-      2.273,
-      11.360,
-      6.818,
-      6.818,
-      70.455
-    ],
-    labels: [
-      "Administration",
-      "Management / Strategic Planning",
-      "Operations / Project Management",
-      "Other",
-      "Teaching / Training",
-      "Translation / Interpretation"
+  {% include 'paragraphs/chart-group.twig' with {
+    title: 'Horizontal Bar chart',
+    text: true,
+    items: [
+      {
+        type: 'doughnut',
+        title: 'chart 1',
+        suffix: '%',
+        labels: ["Administration","Advising/Counseling","Analyst/Research","Communications/Marketing/PR","Management/Strategic Planning","Operations/Project Management","Sales/Account Management","Teaching/Training","Translation/Interpretation","Other"],
+        datasets: [
+          { label: 'Percentage of employment', data: [41,14,4,10,4,18,2,4,1,2] }
+        ]
+      }
     ]
   } %}
 
-  {% include 'paragraphs/chart.twig' with {
-    title: 'Job sector',
-    id: 'job-sector',
-    type: 'doughnut',
-    data: [
-      1.89,
-      3.77,
-      5.66,
-      75.47,
-      13.21
-    ],
-    labels: [
-      "Intergovernmental",
-      "Intergovernmental (i.e., World Bank, UN, etc.)",
-      "Nonprofit/Nongovernmental organization",
-      "Private/Corporate/Business",
-      "Public/Government"
+  {% include 'paragraphs/chart-group.twig' with {
+    title: 'Some pie chart',
+    text: true,
+    items: [
+      {
+        type: 'pie',
+        title: 'chart 1',
+        labels: ['label 1', 'label 2', 'label 3'],
+        datasets: [ { label: 'data 1', data: [1,2,3] },  { label: 'data 1', data: [3,2,6] }  ]
+      },
+      {
+        type: 'doughnut',
+        title: 'chart 1',
+        labels: ['label 1', 'label 2', 'label 3'],
+        datasets: [ { label: 'data 1', data: [1,2,3] }, { label: 'data 1', data: [1,9,5] }  ]
+      }
     ]
   } %}
 
+
+  {% include 'paragraphs/chart-group.twig' with {
+    title: 'Chart group',
+    text: true,
+    items: [
+      {
+        type: 'pie',
+        title: 'chart 1',
+        labels: ['label 1', 'label 2', 'label 3'],
+        datasets: [ { label: 'data 1', data: [1,2,3] } ]
+      },
+      {
+        type: 'doughnut',
+        title: 'chart 2',
+        labels: ['label 1', 'label 2', 'label 3'],
+        datasets: [ { label: 'data 1', data: [3,10,20] } ]
+      },
+      {
+        type: 'doughnut',
+        title: 'chart 3',
+        labels: ['label 1', 'label 2', 'label 3'],
+        datasets: [ { label: 'data 1', data: [13,2,12] } ]
+      }
+    ]
+  } %}
+
+  {% include 'paragraphs/chart-group.twig' with {
+    title: 'Line charts',
+    items: [
+      {
+        type: 'line',
+        title: 'chart 1',
+        labels: ['2019', '2020', '2021', '2022'],
+        datasets: [ { label: 'data 1', data: [3,6,13,30] } ]
+      },
+      {
+        type: 'line',
+        title: 'chart 2',
+        labels: ['2019', '2020', '2021', '2022'],
+        datasets: [ { label: 'data 1', data: [6,17,29,50] } ]
+      },
+    ]
+  } %}
+
+
+  {% include 'paragraphs/chart-group.twig' with {
+    title: 'Line charts',
+    items: [
+      {
+        type: 'line',
+        title: 'chart 1',
+        labels: ['2019', '2020', '2021', '2022'],
+        datasets: [
+          { label: 'data 1', data: [3,-6,13,-30] },
+          { label: 'data 2', data: [70,25,-4,44] },
+          { label: 'data 3', data: [13,-15,-9,52] },
+        ]
+      },
+      {
+        type: 'line',
+        title: 'chart 2',
+        labels: ['2019', '2020', '2021', '2022'],
+        datasets: [
+          { label: 'data 1', data: [19,17,29,-50] },
+          { label: 'data 2', data: [25,-11,34,56] },
+          { label: 'data 3', data: [101,-17,37,-28] }
+        ]
+      },
+    ]
+  } %}
+
+  {% include 'paragraphs/chart-group.twig' with {
+    title: 'Percentage bar',
+    items: [
+      {
+        type: 'percentBar',
+        title: 'chart 1',
+        labels: ['Bananas', 'Apples', 'Oranges', 'Plums', 'Pears', 'Grapes'],
+        datasets: [ { label: 'data set 1', data: [39, 24, 63, 57, 53, 353] }, ],
+      },
+    ]
+  } %}
+
+  {% include 'paragraphs/chart-group.twig' with {
+    title: 'Internships',
+    items: [
+      { type: 'stats', number: 90, label: 'on-campus info sessions with employers', },
+      { type: 'stats', number: 500, label: 'on-campus interviews' },
+      { type: 'stats', number: 2500.53, label: 'Opportunities in our online database', },
+      { type: 'stats', number: 600.23, prefix: '$', suffix: 'k', label: 'of summer internship funding', },
+      { type: 'stats', number: 800, label: 'Summer internships', },
+      { type: 'stats', number: 7500, suffix: '+', label: 'Alumni Career volunteers', },
+    ]
+  } %}
 
   {% include 'paragraphs/map-chart.twig' with {
-    title: 'Map example',
-    id: '1234',
+    title: 'Map chart',
+    text: 'This is map chart text right here.',
     items: [
       {name: 'Germany', abbr: 'de'},
       {name: 'United States', abbr: 'us'},
@@ -105,5 +183,5 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="js/Chart.min.js" async></script>
+<script src="js/Chart.min.js"></script>
 {% endblock %}
