--- a/src/templates/paragraphs/map-chart.twig
+++ b/src/templates/paragraphs/map-chart.twig
@@ -1,6 +1,6 @@
-<div class="chart">
+<div class="paragraph--chart">
   {% if title is not empty %}
-    <h3 class="chart__title">{{title}}</h3>
+    <h2 class="h2 mb-4">{{title}}</h2>
   {% endif %}
   {% include 'partials/world.twig' with { id: id } %}
 
