--- a/src/scss/components/_chart.scss
+++ b/src/scss/components/_chart.scss
@@ -40,6 +40,19 @@
   max-width: 600px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: spacing(7);
+
+  @include media(sm) {
+    margin-bottom: spacing(8);
+  }
+
+  @include media(md) {
+    margin-bottom: spacing(9);
+  }
+
+  .chart-group & {
+    margin-bottom: 0;
+  }
 }
 
 .chart--singlebar {
