render clearfix before floated image
fixes #186

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -107,6 +107,7 @@
 
 // utils
 @import 'utils/borders';
+@import 'utils/clearfix';
 @import 'utils/display';
 @import 'utils/float';
 @import 'utils/font';
