--- a/src/templates/c8-basic-content.twig
+++ b/src/templates/c8-basic-content.twig
@@ -61,6 +61,10 @@
 
   {% include 'paragraphs/button.twig' %}
 
+  {% include 'paragraphs/button.twig' %}
+
+  {% include 'paragraphs/image.twig' with { left: true } %}
+
   {# G1 text paragraph #}
   <div class="text typography">
 
