--- a/src/templates/paragraphs/image.twig
+++ b/src/templates/paragraphs/image.twig
@@ -1,3 +1,4 @@
+{% if right or left %}<div class="clearfix"></div>{% endif %}
 <div class="image{% if right %} image--right{% endif %}{% if left %} image--left{% endif %}">
   <figure class="media media--image">
     {% if right or left %}
