--- a/src/scss/components/_page-nav.scss
+++ b/src/scss/components/_page-nav.scss
@@ -60,7 +60,8 @@
   }
 }
 
-.page-nav__list--callouts, .page-nav__list--secondary {
+.page-nav__list--callouts,
+.page-nav__list--secondary {
   border-top: 4px solid #cfd5db;
   margin-top: 1.5rem;
   padding-top: 1.5rem;
