update alert warning color and padding
for https://github.com/middlebury/drupal7/issues/837

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -112,7 +112,7 @@ $gray-lighter: #f8f8f8;
 
 $danger: #dc3545;
 $info: $lighter-blue;
-$warning: #ffc107;
+$warning: #fedb85;
 
 $text-colors: (
   'primary': $brand-primary,
