--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,6 +19,7 @@
 // components
 @import 'components/accordion';
 @import 'components/alert';
+@import 'components/announcement';
 @import 'components/audio';
 @import 'components/breadcrumb';
 @import 'components/button';
