--- a/src/templates/c8-basic-content.twig
+++ b/src/templates/c8-basic-content.twig
@@ -59,6 +59,8 @@
 
   {% include 'partials/lead.twig' %}
 
+  {% include 'paragraphs/announcement.twig' %}
+
   {% include 'paragraphs/button.twig' %}
 
   {% include 'paragraphs/button.twig' %}
