--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -144,3 +144,13 @@
 .color-gray {
   color: $gray;
 }
+
+/* libchat widget button */
+.lcs_slide_out header a {
+  right: 10px !important;
+  left: auto !important;
+  top: auto !important;
+  bottom: 100% !important;
+  border: 1px solid #fff !important;
+  box-shadow: none !important;
+}
