--- a/src/scss/pardot-forms.scss
+++ b/src/scss/pardot-forms.scss
@@ -15,7 +15,8 @@
   display: block;
   font-weight: 500;
   font-size: 16px;
-  margin-bottom: 0.5rem;
+  line-height: $line-height-heading;
+  margin-bottom: $spacing-1;
 }
 
 .description {
