--- a/src/scss/pardot-forms.scss
+++ b/src/scss/pardot-forms.scss
@@ -44,6 +44,7 @@ select {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3E%3Cpath fill='%230D395F' fill-rule='evenodd' d='M4 8l4-8H0z'/%3E%3C/svg%3E");
   background-position: right $input-padding-x center;
   background-repeat: no-repeat;
+  padding-right: $input-padding-x * 2;
 }
 
 select:focus,
