add title and spacing wrapper

--- a/src/templates/paragraphs/lib-search.twig
+++ b/src/templates/paragraphs/lib-search.twig
@@ -1,1 +1,6 @@
-{% include 'partials/lib-search-tabs.twig' %}
+<div class="paragraph">
+  <h2 class="mb-4 mb-md-5 mb-md-6">Search</h2>
+
+  {% include 'partials/lib-search-tabs.twig' %}
+
+</div>
