--- a/src/templates/partials/miis-lib-widget-miiscat.twig
+++ b/src/templates/partials/miis-lib-widget-miiscat.twig
@@ -1,4 +1,4 @@
-<form action="https://mbury.iii.com/search/a?a" method="post">
+<form action="https://mbury.iii.com/search~S17/a?a" method="post">
   <input name="searchscope" type="hidden" value="17" />
   <input name="SORT" type="hidden" value="D" />
   <input name="submit" type="hidden" value="Submit" />
@@ -52,7 +52,7 @@
       </dt>
       <dd class="mb-2">Find books, ebooks, DVDs, and more.</dd>
       <dt>
-        <a href="https://mbury.iii.com/search/X">Advanced Search</a>
+        <a href="https://mbury.iii.com/search~S17/X">Advanced Search</a>
       </dt>
       <dd class="mb-2">Customize your search.</dd>
       <dt>
